Fix overflow

--- a/resources/style/remake/advanced-search.scss
+++ b/resources/style/remake/advanced-search.scss
@@ -1,4 +1,8 @@
 #search-form {
+  display: flex;
+  flex-direction: column;
+  max-height: calc(80vh - 3rem);
+
   .criteria-input,
   [role='combobox'] {
     min-width: 175px;
@@ -17,14 +21,23 @@
   }
 }
 
+#query-editor-container {
+  overflow-y: auto;
+  padding: 2px 0;
+}
+
 #query-editor {
   width: 100%;
-  border-collapse: separate;
-  border-spacing: 0 0.25rem;
+  border-spacing: 0;
+
+  tr {
+    margin-bottom: 0.25rem;
+  }
 
   td,
   th {
     padding: 0;
+    padding-bottom: 0.25rem;
   }
 
   td {
