--- a/resources/style/remake/global.scss
+++ b/resources/style/remake/global.scss
@@ -52,7 +52,7 @@ header h2 {
 
 fieldset {
   margin: 0;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
   border: none;
   padding: 0;
 
