--- a/widgets/popovers/popover.scss
+++ b/widgets/popovers/popover.scss
@@ -10,6 +10,7 @@ dialog {
   bottom: 0;
   min-width: min(50ch, 80vw);
   max-width: max(80vw, 80ch);
+  max-height: 80vh;
 
   &[open] {
     @keyframes appear {
